# 2D_lidar_person_detection

./: .gitignore  README.md  mynotes.md  req.txt
dr_spaam/: detector.py
dr_spaam_ros2/: package.xml  setup.cfg  setup.py
dr_spaam_ros2/config/: params.yaml
dr_spaam_ros2/dr_spaam_ros2/: dr_spaam_ros2_node.py
dr_spaam_ros2/install/: local_setup.sh  setup.sh
dr_spaam_ros2/install/dr_spaam_ros2/lib/dr_spaam_ros2/: dr_spaam_ros2_node
dr_spaam_ros2/install/dr_spaam_ros2/share/dr_spaam_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
dr_spaam_ros2/install/dr_spaam_ros2/share/dr_spaam_ros2/config/: params.yaml
dr_spaam_ros2/launch/: dr_spaam_ros2.launch.py
dr_spaam_ros2/log/: latest_build
