<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dr_spaam_ros2</name>
  <version>1.2.0</version>
  <description>ROS2 wrapper package for 2D LiDAR person detection using DROW3 and DR-SPAAM</description>
  <maintainer email="jia@vision.rwth-aachen.de">Dan Jia</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
